--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
+:root{
+  --header-color:#65C1CB;
+  --main-color: #A1DFC6;
+  --button-color:#CB6F65;
+  --btn-color-hover: #C45A4E;
+}
+
 *{
   box-sizing: border-box;
 }
 
+
 .header{
   height: 70px;
-  background-color: #40B2BF;
+  background-color: var(--header-color);
   color: black;
   display: flex;
   align-items: center;
@@ -20,7 +28,7 @@
 
 .header-button{
   margin-right: 65px;
-  background-color: #C45A4E;
+  background-color: var( --button-color);
   border: none;
   outline: none;
   cursor: pointer;
@@ -32,27 +40,73 @@
   text-decoration: none;
 }
 
+.header-button:hover{
+  background-color: #C45A4E;
+}
+
 main{
-  background-color: #A1DFC6;
+  background-color: var(--main-color);
+  padding-bottom: 30px;
+}
+
+h2{
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 50px;
 }
 
 input{
   margin: 10px;
+  font-family: sans-serif;
+  font-size: 14px;
 }
 
-.input{
-  height: 50px;
-  width: 60vw;
-  background-color: #C45A4E;
+textarea{
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+.input-recipe{
+  display: flex;
+  justify-content: center;
+  margin: 0px 50px;
+}
+
+.input-container{
+  height: 200px;
+  width: 100%;
+  background-color: var(--btn-color-hover);
   display: flex;
   font-family: sans-serif;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   border-radius: 8px;
-  margin: 20px;
+  margin-top: 20px;
+  box-sizing: border-box;
 }
 
-.recipe-container{}
+.input-title{
+  height: 30px;
+}
+
+.input-image{
+  height: 30px;
+}
+
+.input-ingredients{
+  height: 80%;
+}
+
+.input-instructions{
+ width: 50%;
+ height: 80%;
+}
+
+.recipe-display{
+  box-shadow: 8px 15px 9px black;
+}
 
 .recipe-title{
   display: flex;
@@ -64,7 +118,6 @@ input{
   padding: 10px;
   font-family: sans-serif;
   font-size: 30px;
-  /* border: solid 1.5px gray; */
   border-bottom: none;
 }
 
@@ -77,7 +130,6 @@ input{
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   padding: 20px;
-  /* border: solid 1.5px gray; */
   border-top: none;
 }
 
@@ -95,17 +147,18 @@ input{
 
 .action-btn{
   margin: 7px;
-  background-color: #C45A4D;
+  background-color: var(--button-color);
   border: none;
   outline: none;
   cursor: pointer;
   border-radius: 3px;
   font-size: 14px;
   padding: 6px 10px;
+  box-shadow: 2px 1px 7px black;
 }
 
 .action-btn:hover{
-  background-color: #D9958D;
+  background-color: var(--btn-color-hover);
 }
 
 b{
@@ -129,6 +182,22 @@ line-height: 20px;
   width: 190%;
   margin: 10px;
   line-height: 20px;
+}
+
+.submit-btn{
+  background-color: var(--header-color);
+  outline: none;
+  border: none;
+  box-shadow: 4px 3px 7px black;
+  cursor: pointer;
+  padding: 10px 15px;
+  margin: 10px;
+  font-family: sans-serif;
+  border-radius: 5px;
+}
+
+.submit-btn:hover{
+background-color: #90D2DA;
 }
 
 .display-editor{
